# JTA_FFT

./: .gitignore  .gitignore.swp  2022-03-08-library-creator.py  2022-03-09-estimate-pose-actiyas.py  ANOTHERTEST  FFT_Requirements.txt  GMK_fem_predict.ipynb  JTA_FFT.py  JTA_FFT_try.py  LICENSE  MakeLib.py  NFD_Lib.py  README.md  arizona_fem_predict.ipynb  calibration.txt  call-GMK.py  call-actiyas.py  call-arizona.py  call-florent.py  call-lima.py  call-toshi.py  call.py  create-library-pic.ipynb  dc_fem.npy  environment.yml  estimate_pose.py  estimate_z.pro  example_call.py  examplecall.py  fem_test_prediction_grid_Arizona_000000000000.tif  florent_fem_predict.ipynb  lib-angle_fem.npy  lib_match.pro  library-creator.py  lima-estimate.py  lima_fem_predict.ipynb  mag_fem.npy  notes.txt  output_data.txt  rotation_utility.py  (+10 more)
Call Files/: call-GMK.py  call-arizona.py  call-florent.py  call-lima.py  excall.py
Deprecated/: pickle_test.py  surface-test.py
FFT_Package/: JTA_FFT.py  JTA_FFT_dataset.py  LICENSE  README.md  pyproject.toml  setup.cfg
FFT_Package/src/FFT/: FFT_Requirements.txt  JTA_FFT.py
JTA_NFD_Package/: setup.py
lima_files/: dc_fem.npy  dc_tib.npy  fem_test_prediction_grid_Lima_000000000000.tif  fem_test_prediction_grid_Lima_000000000001.tif  fem_test_prediction_grid_Lima_000000000002.tif  fem_test_prediction_grid_Lima_000000000003.tif  fem_test_prediction_grid_Lima_000000000004.tif  fem_test_prediction_grid_Lima_000000000005.tif  fem_test_prediction_grid_Lima_000000000006.tif  fem_test_prediction_grid_Lima_000000000007.tif  fem_test_prediction_grid_Lima_000000000008.tif  fem_test_prediction_grid_Lima_000000000009.tif  fem_test_prediction_grid_Lima_000000000010.tif  fem_test_prediction_grid_Lima_000000000011.tif  fem_test_prediction_grid_Lima_000000000012.tif  fem_test_prediction_grid_Lima_000000000013.tif  fem_test_prediction_grid_Lima_000000000014.tif  fem_test_prediction_grid_Lima_000000000015.tif  mag_fem.npy  (+6 more)
(+61 files in other folders)
