[build-system]
requires = [
    "setuptools>=42",
    "wheel",
    "aiohttp==3.7.4.post0",
    "async-timeout==3.0.1",
    "attrs==21.2.0",
    "autobahn==21.3.1",
    "Automat==20.2.0",
    "cffi==1.14.6",
    "chardet==4.0.0",
    "constantly==15.1.0",
    "cryptography==35.0.0",
    "cycler==0.10.0",
    "hyperlink==21.0.0",
    "idna==3.2",
    "imageio==2.9.0",
    "incremental==21.3.0",
    "kiwisolver==1.3.2",
    "matplotlib==3.4.3",
    "multidict==5.2.0",
    "networkx==2.6.3",
    "numpy==1.21.2",
    "opencv-python==4.5.3.56",
    "Pillow==8.3.2",
    "pycparser==2.20",
    "pyparsing==2.4.7",
    "python-dateutil==2.8.2",
    "PyWavelets==1.1.1",
    "scikit-image==0.18.3",
    "scipy==1.7.1",
    "six==1.16.0",
    "tifffile==2021.10.12",
    "torch==1.9.1",
    "torchaudio==0.9.1",
    "torchvision==0.10.1",
    "Twisted==21.7.0",
    "twisted-iocpsupport==1.0.2",
    "txaio==21.2.1",
    "typing-extensions==3.10.0.2",
    "vtk==9.0.3",
    "wslink==1.0.7",
    "yarl==1.6.3",
    "zope.interface==5.4.0"
]
build-backend = "setuptools.build_meta"