[metadata]
name = JTA_FastFourierTransform
version = 1.1.1
author = Dr. Scott A. Banks, Andrew Jensen, Joshua Aird, Nicholas Verdugo
author_email = ajensen@ufl.edu
description = Part of a toolkit that can generate shape libraries (using Fourier Transforms) that facilitate segmentation and estimation of poses for flouroscopic imagery of joint replacements. 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/BRIO-lab/JTA_FFT
project_urls =
    Bug Tracker = https://github.com/BRIO-lab/JTA_FFT/issues
classifiers =
    Programming Language :: Python :: 3
    
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src